Fixed body scroll on ios

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,22 +24,21 @@ h1, h2, h3, h4, h5 {
     margin: 0;
 }
 body {
+    margin: 0 auto!important;
+    right: 50%!important;
     font-family: Manrope;
     font-style: normal;
     font-weight: bold;
     padding: 0;
-    margin: 0;
     background-color: #4F30BF;
     color: $text;
-}
-html,
-body {
-    position: relative;
+    width: 500px;
 }
 .wrapper {
     margin: 0 auto;
     display: flex;
     justify-content: center;
+    max-height: 100vh;
 }
 
 
@@ -110,7 +109,7 @@ body {
         }
 }
 .game-screen {
-    overscroll-behavior: none!important;
+    margin: 0 auto;
     width: 100%;
     height: 100vh;
     display: none;
